# BreadBoardEngine

./: .gitignore  .gitmodules  CMake Setup.bat  CMakeLists.txt  LICENSE  README.md
Assets/Shaders/: Color.frag  Color.vert  LightEdit.frag  Material.frag  Material.vert  Sprite.frag  Sprite.vert  Texture.frag  White.frag  White.vert
Engine/: Application.cpp  Application.h  CMakeLists.txt  ConsoleWindow.cpp  ConsoleWindow.h  Draw.cpp  Draw.h  Input.cpp  Input.h  KeyCodes.h  Light.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  StaticRenderer.cpp  StaticRenderer.h  Texture.cpp  Texture.h  Typedefs.h  Vertex.h  VertexAttribute.h  Window.cpp  Window.h
Engine/Components/: Camera.cpp  Camera.h  Light.h  MeshRenderer.h  RectTransform.cpp  RectTransform.h  Sprite.h  Transform.cpp  Transform.h
Engine/DataType/: Image.cpp  Image.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
Engine/Editor/: EditorCamera.cpp  EditorCamera.h
Engine/Systems/: BaseSystem.h  EnttSystem.h  RenderSystem.cpp  RenderSystem.h
Projects/: CMakeLists.txt
Projects/Breakout/: CMakeLists.txt
Projects/Breakout/assets/: Sprite.frag
Projects/Breakout/src/: Ball.h  BallSystem.cpp  BallSystem.h  BreakoutApp.cpp  BreakoutApp.h  Brick.h  GameLevel.cpp  GameLevel.h  GameState.h  Paddle.h  PaddleSystem.cpp  PaddleSystem.h
Projects/BulletMMO/: CMakeLists.txt
Projects/BulletMMO/Assets/Shaders/: Default.vs  Missing.fs  Missing.vs  Texture.fs
Projects/BulletMMO/src/: BulletMMOApp.cpp  BulletMMOApp.h
Projects/Sandbox/: CMakeLists.txt
Projects/Sandbox/assets/Shaders/: White.frag  White.vert
Projects/Sandbox/src/: SandboxApp.cpp  SandboxApp.h
Projects/Tetris/: CMakeLists.txt
Projects/Tetris/src/: TetrisApp.cpp  TetrisApp.h
